# llama.cpp

./: .gitattributes  AGENTS.md  CHANGELOG.md  CMakePresets.json
.github/workflows/: fork-kepler-opencl-build.yml
docs/: fork-merge-pins.md  kepler-opencl-fork.md
docs/backend/: OPENCL.md  opencl-kepler-device-matrix.md  opencl-kepler-op-parity-matrix.md
ggml/: CMakeLists.txt
ggml/include/: ggml-opencl-kepler.h
ggml/src/: CMakeLists.txt  ggml-backend-reg.cpp
ggml/src/ggml-opencl/: CMakeLists.txt  ggml-opencl.cpp
ggml/src/ggml-opencl-kepler/: CMakeLists.txt  ggml-opencl-kepler-relaxed-flag.cpp  ggml-opencl-kepler.cpp
ggml/src/ggml-opencl/kernels/: legacy_core.cl  set_rows.cl
src/: llama-context.cpp  llama-kv-cache.cpp
