find_package(OpenCL REQUIRED)
find_package(Python3 REQUIRED)

set(TARGET_NAME ggml-opencl-kepler)

ggml_add_backend_library(${TARGET_NAME}
                         ggml-opencl-kepler.cpp
                         ggml-opencl-kepler-relaxed-flag.cpp
                         ../../include/ggml-opencl-kepler.h)

target_link_libraries(${TARGET_NAME} PRIVATE ${OpenCL_LIBRARIES})
target_include_directories(${TARGET_NAME} PRIVATE ${OpenCL_INCLUDE_DIRS} ..)

# CLBlast (required for MUL_MAT on this backend)
find_package(CLBlast QUIET)
if (NOT CLBlast_FOUND)
    include(FetchContent)
    set(SAMPLES OFF CACHE BOOL "" FORCE)
    set(TUNERS OFF CACHE BOOL "" FORCE)
    set(CLIENTS OFF CACHE BOOL "" FORCE)
    set(TESTS OFF CACHE BOOL "" FORCE)
    set(CUBLAS OFF CACHE BOOL "" FORCE)
    set(NETLIB OFF CACHE BOOL "" FORCE)
    set(OPENCL ON CACHE BOOL "" FORCE)
    set(CUDA OFF CACHE BOOL "" FORCE)
    FetchContent_Declare(
        clblast
        GIT_REPOSITORY https://github.com/CNugteren/CLBlast.git
        GIT_TAG        1.6.3
        GIT_SHALLOW    TRUE
    )
    FetchContent_MakeAvailable(clblast)
endif ()
if (TARGET CLBlast::clblast)
    target_link_libraries(${TARGET_NAME} PRIVATE CLBlast::clblast)
elseif (TARGET clblast)
    target_link_libraries(${TARGET_NAME} PRIVATE clblast)
else ()
    target_link_libraries(${TARGET_NAME} PRIVATE clblast)
endif ()

# Kepler path: OpenCL 1.2 host API, legacy NVIDIA tensor path, embedded kernels from upstream ggml-opencl/kernels.
# GGML_OPENCL_SOA_Q matches stock ggml-opencl (CMakeLists there always defines it): quantized weights use split q/d (etc.) buffers
# required by mul_mm_q*_l4_lm and related dispatch; without it, C++ references extra0_q4_0 and friends that are only declared under SOA_Q.
target_compile_definitions(${TARGET_NAME} PRIVATE
    GGML_OPENCL_SOA_Q
    GGML_OPENCL_USE_CLBLAST
    GGML_OPENCL_LEGACY_NVIDIA
    GGML_OPENCL_TARGET_VERSION=120
    GGML_OPENCL_KEPLER_BUILD=1)

if (GGML_OPENCL_EMBED_KERNELS)
    target_compile_definitions(${TARGET_NAME} PRIVATE GGML_OPENCL_EMBED_KERNELS)
    set(EMBED_KERNEL_SCRIPT "${CMAKE_CURRENT_SOURCE_DIR}/../ggml-opencl/kernels/embed_kernel.py")
    file(MAKE_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}/autogenerated")
    target_include_directories(${TARGET_NAME} PRIVATE "${CMAKE_CURRENT_BINARY_DIR}/autogenerated")
endif ()

function(ggml_opencl_kepler_add_kernel KNAME)
    set(KERN_HDR ${CMAKE_CURRENT_BINARY_DIR}/autogenerated/${KNAME}.cl.h)
    set(KERN_SRC ${CMAKE_CURRENT_SOURCE_DIR}/../ggml-opencl/kernels/${KNAME}.cl)
    if (GGML_OPENCL_EMBED_KERNELS)
        message(STATUS "opencl-kepler: embedding kernel ${KNAME}")
        add_custom_command(
            OUTPUT ${KERN_HDR}
            COMMAND ${Python3_EXECUTABLE} ${EMBED_KERNEL_SCRIPT} ${KERN_SRC} ${KERN_HDR}
            DEPENDS ${KERN_SRC} ${EMBED_KERNEL_SCRIPT}
            COMMENT "Generate ${KERN_HDR}"
        )
        target_sources(${TARGET_NAME} PRIVATE ${KERN_HDR})
    else ()
        message(STATUS "opencl-kepler: adding kernel ${KNAME}")
        configure_file(${KERN_SRC} ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/${KNAME}.cl COPYONLY)
    endif ()
endfunction()

set(GGML_OPENCL_KEPLER_KERNELS
    add
    add_id
    argsort
    tri
    fill
    clamp
    cpy
    cvt
    diag_mask_inf
    diag
    div
    gelu
    gemv_noshuffle_general
    gemv_noshuffle
    get_rows
    glu
    group_norm
    solve_tri
    im2col_f32
    im2col_f16
    mean
    mul_mat_Ab_Bi_8x4
    mul_mv_f16_f16
    mul_mv_f16_f32_1row
    mul_mv_f16_f32_l4
    mul_mv_f16_f32
    mul_mv_f32_f32
    mul_mv_q4_0_f32
    mul_mv_q4_0_f32_v
    mul_mv_q4_0_f32_8x_flat
    mul_mv_q4_0_f32_1d_8x_flat
    mul_mv_q4_0_f32_1d_16x_flat
    mul_mv_q4_1_f32
    mul_mv_q4_1_f32_flat
    mul_mv_q4_k_f32
    mul_mv_q4_k_f32_flat
    mul_mv_q6_k_f32
    mul_mv_q6_k_f32_flat
    mul_mv_q8_0_f32
    mul_mv_q8_0_f32_flat
    mul_mv_mxfp4_f32
    mul_mv_mxfp4_f32_flat
    mul_mv_id_q4_0_f32_8x_flat
    mul_mv_id_q8_0_f32
    mul_mv_id_q8_0_f32_flat
    mul_mv_id_mxfp4_f32
    mul_mv_id_mxfp4_f32_flat
    gemm_moe_mxfp4_f32
    gemv_moe_mxfp4_f32
    mul_mm_f32_f32_l4_lm
    mul_mm_f16_f32_l4_lm
    mul_mm_q4_0_f32_l4_lm
    mul_mm_q4_1_f32_l4_lm
    mul_mm_q8_0_f32_l4_lm
    mul_mm_q4_k_f32_l4_lm
    mul_mm_q6_k_f32_l4_lm
    mul_mm_q8_0_f32_8x4
    gemv_noshuffle_q4_1_f32
    gemm_noshuffle_q4_1_f32
    gemv_noshuffle_general_q8_0_f32
    gemv_noshuffle_q4_k_f32
    gemm_noshuffle_q4_k_f32
    gemv_noshuffle_q6_k_f32
    gemm_noshuffle_q6_k_f32
    mul
    neg
    norm
    relu
    l2_norm
    rms_norm
    rope
    scale
    set_rows
    sigmoid
    silu
    softmax_4_f32
    softmax_4_f16
    softmax_f32
    softmax_f16
    sqr
    sqrt
    ssm_conv
    sub
    sum_rows
    cumsum
    transpose
    concat
    tsembd
    upscale
    tanh
    exp
    expm1
    softplus
    pad
    repeat
    mul_mat_f16_f32
    mul_mm_f16_f32_kq_kqv
    conv2d
    conv2d_f16_f32
    flash_attn_f32_f16
    flash_attn_f16
    flash_attn_f32
    legacy_core
)

foreach (K ${GGML_OPENCL_KEPLER_KERNELS})
    ggml_opencl_kepler_add_kernel(${K})
endforeach ()
